# metal-cpp-sample

./: .gitignore  CMakeLists.txt  main.cpp
include/: CMakeLists.txt  metal_ops.cpp  metal_ops.hpp  ops.metal  util.hpp
